--- a/Experiment 1.1
+++ b/Experiment 1.1
@@ -1,4 +1,4 @@
-
+A)
     1.Create a table EMPLOYEE have the following fields (emp_id, name,city,dob,adhar_no)
      
     mysql> create table EMPLOYEE(emp_id int,name varchar(25),dob date,adhar_no int);
@@ -143,4 +143,132 @@
     | pid      | int(11) | YES  | MUL | NULL    |       |
     | quantity | int(11) | YES  |     | NULL    |       |
     +----------+---------+------+-----+---------+-------+
-    3 rows in set (0
+    3 rows in set (0.00 sec)
+    
+    
+    
+B)
+
+1)Add a column ‘SSN’ at the first position in the table EMPLOYEE
+
+mysql> alter table EMPLOYEE add column SSN int(10) first ;
+Query OK, 0 rows affected (0.63 sec)
+Records: 0  Duplicates: 0  Warnings: 0
+
+mysql> desc EMPLOYEE;
++----------+-------------+------+-----+---------+-------+
+| Field    | Type        | Null | Key | Default | Extra |
++----------+-------------+------+-----+---------+-------+
+| SSN      | int(10)     | YES  |     | NULL    |       |
+| emp_id   | int(11)     | YES  |     | NULL    |       |
+| name     | varchar(50) | YES  |     | NULL    |       |
+| city     | varchar(50) | YES  |     | NULL    |       |
+| dob      | date        | YES  |     | NULL    |       |
+| adhar_no | int(20)     | YES  |     | NULL    |       |
++----------+-------------+------+-----+---------+-------+
+6 rows in set (0.00 sec)
+
+
+2)Change the data type of the column ‘DOB’  in year the table EMPLOYEE
+
+mysql> ALTER TABLE EMPLOYEE modify dob year;
+Query OK, 0 rows affected (0.78 sec)
+Records: 0  Duplicates: 0  Warnings: 0
+
+mysql> desc EMPLOYEE;
++----------+-------------+------+-----+---------+-------+
+| Field    | Type        | Null | Key | Default | Extra |
++----------+-------------+------+-----+---------+-------+
+| SSN      | int(10)     | YES  |     | NULL    |       |
+| emp_id   | int(11)     | YES  |     | NULL    |       |
+| name     | varchar(50) | YES  |     | NULL    |       |
+| city     | varchar(50) | YES  |     | NULL    |       |
+| dob      | year(4)     | YES  |     | NULL    |       |
+| adhar_no | int(20)     | YES  |     | NULL    |       |
++----------+-------------+------+-----+---------+-------+
+6 rows in set (0.00 sec)
+
+
+3)Delete the column ‘emp_id’ the table EMPLOYEE.
+
+mysql> alter table EMPLOYEE drop column emp_id;
+Query OK, 0 rows affected (0.53 sec)
+Records: 0  Duplicates: 0  Warnings: 0
+
+mysql> desc EMPLOYEE;
++----------+-------------+------+-----+---------+-------+
+| Field    | Type        | Null | Key | Default | Extra |
++----------+-------------+------+-----+---------+-------+
+| SSN      | int(10)     | YES  |     | NULL    |       |
+| name     | varchar(50) | YES  |     | NULL    |       |
+| city     | varchar(50) | YES  |     | NULL    |       |
+| dob      | year(4)     | YES  |     | NULL    |       |
+| adhar_no | int(20)     | YES  |     | NULL    |       |
++----------+-------------+------+-----+---------+-------+
+5 rows in set (0.00 sec)
+
+
+4)Add  the constraint unique for columns ‘SSN, ‘adhar_no’ the table EMPLOYEE
+
+
+mysql> alter table EMPLOYEE add constraint uni1 unique(SSN),add constraint uni2 unique(adhar_no);
+Query OK, 0 rows affected (0.81 sec)
+Records: 0  Duplicates: 0  Warnings: 0
+
+mysql> desc EMPLOYEE;
++----------+-------------+------+-----+---------+-------+
+| Field    | Type        | Null | Key | Default | Extra |
++----------+-------------+------+-----+---------+-------+
+| SSN      | int(10)     | YES  | UNI | NULL    |       |
+| name     | varchar(50) | YES  |     | NULL    |       |
+| city     | varchar(50) | YES  |     | NULL    |       |
+| dob      | year(4)     | YES  |     | NULL    |       |
+| adhar_no | int(20)     | YES  | UNI | NULL    |       |
++----------+-------------+------+-----+---------+-------+
+5 rows in set (0.00 sec)
+
+5)Delete the NULL constraint of ‘age’ in the STUDENT table.
+
+
+mysql> alter table STUDENT modify age int null;
+Query OK, 0 rows affected (0.09 sec)
+Records: 0  Duplicates: 0  Warnings: 0
+
+mysql> desc STUDENT;
++---------+-------------+------+-----+---------+-------+
+| Field   | Type        | Null | Key | Default | Extra |
++---------+-------------+------+-----+---------+-------+
+| roll_no | int(10)     | NO   | PRI | NULL    |       |
+| name    | varchar(50) | NO   |     | NULL    |       |
+| age     | int(11)     | YES  |     | NULL    |       |
+| address | varchar(50) | YES  |     | NULL    |       |
+| gender  | varchar(20) | YES  |     | m       |       |
++---------+-------------+------+-----+---------+-------+
+5 rows in set (0.00 sec)
+
+6)Change the table name EMPLOYEE as PERSON
+
+
+mysql> alter table EMPLOYEE rename to PERSON;
+Query OK, 0 rows affected (0.17 sec)
+
+mysql> desc PERSON;
++----------+-------------+------+-----+---------+-------+
+| Field    | Type        | Null | Key | Default | Extra |
++----------+-------------+------+-----+---------+-------+
+| SSN      | int(10)     | YES  | UNI | NULL    |       |
+| name     | varchar(50) | YES  |     | NULL    |       |
+| city     | varchar(50) | YES  |     | NULL    |       |
+| dob      | year(4)     | YES  |     | NULL    |       |
+| adhar_no | int(20)     | YES  | UNI | NULL    |       |
++----------+-------------+------+-----+---------+-------+
+5 rows in set (0.01 sec)
+
+
+7)Delete the table DUPEMPLOYEE.
+
+mysql> drop table DUPEMPLOYEE;
+Query OK, 0 rows affected (0.17 sec)
+
+mysql> desc DUPEMPLOYEE;
+ERROR 1146 (42S02): Table 'DBMS.DUPEMPLOYEE' doesn't exist
