--- a/Experiment 1.1
+++ b/Experiment 1.1
@@ -1,3 +1,6 @@
+                                EXP NO: 1.1 DDL COMMANDS
+                                ************************
+
 A)
     1.Create a table EMPLOYEE have the following fields (emp_id, name,city,dob,adhar_no)
      
@@ -272,3 +275,6 @@ Query OK, 0 rows affected (0.17 sec)
 
 mysql> desc DUPEMPLOYEE;
 ERROR 1146 (42S02): Table 'DBMS.DUPEMPLOYEE' doesn't exist
+
+//ADD PROPER HEADDINGS
+//VERIFIED
