--- a/Experiment 1.5
+++ b/Experiment 1.5
@@ -231,3 +231,4 @@ mysql> SELECT DISTINCT name FROM Customer WHERE id IN (SELECT cust_id FROM Invoi
 
 
 ----------------------------------------------------------------------------------------------------------------------------------------------
+//VERIFIED
