--- a/Experiment 1.6
+++ b/Experiment 1.6
@@ -47,3 +47,4 @@ mysql> select * from Invoice_product2;
 
 
 ----------------------------------------------------------------------------------------------------------------------------------------------
+//VERIFIED
