--- a/Experiment 1.7
+++ b/Experiment 1.7
@@ -92,4 +92,4 @@ mysql> SELECT CONCAT(name, " LIVES IN ", city) AS CUST_INFO FROM Customer;
 +---------------------------+
 5 rows in set (0.01 sec)
 
-
+//VERIFIED
