--- a/Experiment 2.2
+++ b/Experiment 2.2
@@ -26,3 +26,4 @@ mysql> select pid,pname,Price,pricerng(Price) from Product;
 | 256 | DISPOSABLE MASK PACK |   107 | high            |
 +-----+----------------------+-------+-----------------+
 13 rows in set (0.00 sec)
+//VERIFIED
